force-app/main/default/objects/PageSize_API__c/PageSize_API__c.object-meta.xml
<CustomObject>
    <label>PageSize API</label>
    <nameField>
        <label>PageSize API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PageSize API</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>