force-app/main/default/objects/PageSize_API__c/fields/End_Index__c.field-meta.xml
<CustomField>
    <fullName>End_Index__c</fullName>
    <label>End Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>