force-app/main/default/objects/PageSize_API__c/fields/Is_Empty_Return__c.field-meta.xml
<CustomField>
    <fullName>Is_Empty_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Empty Return</label>
    <type>Checkbox</type>
</CustomField>