force-app/main/default/objects/PageSize_API__c/fields/Total_record__c.field-meta.xml
<CustomField>
    <fullName>Total_record__c</fullName>
    <label>Total record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>